--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -18,6 +18,16 @@
     "id": "k7sKpvkYZ3tz",
     "outputId": "06cf2a6a-c42c-48d0-d662-2e0d443543a0"
    },
+ "source": [
+    "# T81-558: Applications of Deep Neural Networks\n",
+    "* Instructor: [Jeff Heaton](https://sites.wustl.edu/jeffheaton/), School of Engineering and Applied Science, [Washington University in St. Louis](https://engineering.wustl.edu/Programs/Pages/default.aspx)\n",
+    "* For more information visit the [class website](https://sites.wustl.edu/jeffheaton/t81-558/).\n",
+    "\n",
+    "**Module 1 Assignment: How to Submit an Assignment**\n",
+    "\n",
+    "**Student Name: Your Name**"
+   ]
+  },
   "outputs": [],
    "source": [
     "# This is your student key that I emailed to you at the beginnning of the semester.\n",
