--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -1,4 +1,22 @@
 {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 87
+    },
+    "colab_type": "code",
+    "id": "fghj",
+    "outputId": "06cf2a6a-c42c-48d0-d662-2e0d443543a0"
+   },
+  "outputs": [],
+   "source": [
+    "123"
+   ]
+  },
+
+{
  "cells": [
   {
    "cell_type": "markdown",
