--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -25,25 +25,7 @@
    "source": [
     "# Checking Your Submission\n",
     "\n",
-    "You can always double-check to make sure my program correctly received your submission.  The following utility code will help with that."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "YrtN_yZnZ3t5",
-    "outputId": "f11b2136-6d4b-47d2-faab-7f7bb04c9f4c"
-   },
-   "outputs": [],
-   "source": [
-    "# Show a listing of all submitted assignments.\n",
-    "\n",
-    "key = \"Gx5en9cEVvaZnjhdaushddhuhhO4PsI32sgldAXj\"\n",
-    "\n",
-    "list_submits(key)"
+    "Text text text"
    ]
   },
   {
