--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -28,6 +28,17 @@
     "Text text text"
    ]
   },
+{
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "-OvkF33bZ3t9"
+   },
+   "outputs": [],
+   "source": []
+  }
  ],
  "metadata": {
   "anaconda-cloud": {},
