--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -9,7 +9,9 @@
   "source": [
     "# Hamiltoninan - Center of Mass transformation\n",
     "\n",
-    "In the following, the Hamiltonian in the Center of Mass formalism will be derived. "
+    "In the following, the Hamiltonian in the Center of Mass formalism will be derived. ",
+    "\n",
+    "Hello"
    ]
   }
  ],
