--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -11,7 +11,8 @@
     "\n",
     "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n ",
     "\n",
-    "Hello"
+    "$\\begin{align}\n",
+    "\\mathcal{H}"
    ]
   },
   {
