--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n ",
     "\n",
-    "$\\begin{aligned}\n",
+    "$\\begin{align}\n",
     "\\mathcal{H}",
-    "\\end{aligned}$"
+    "\\end{align}$"
    ]
   },
   {
