--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -12,7 +12,7 @@
     "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n ",
     "\n",
     "$\\begin{align}\n",
-    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}",
+    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla",
     "\\end{align}$"
    ]
   }
