--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -12,7 +12,7 @@
     "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n ",
     "\n",
     "$\\begin{align}\n",
-    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla",
+    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla_{1}^{2}- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{1}-r_{2})",
     "\\end{align}$"
    ]
   }
