--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "$\\begin{align}\n",
     "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla_{1}^{2}- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{1}-r_{2})",
-    "\\end{align}$"
+    "\\end{align}$",
+    "```\n",
+    "Beep Boop"
    ]
   }
  ],
