--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -15,7 +15,7 @@
     "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla_{1}^{2}- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{1}-r_{2})",
     "\\end{align}$\n",
     "\n",
-    "Beep Boop"
+    "The new coordinates, $A_{1}$ and $B_{2}$"
    ]
   }
  ],
