--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -12,10 +12,14 @@
     "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n ",
     "\n",
     "$\\begin{align}\n",
-    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla_{1}^{2}- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{1}-r_{2})",
+    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla_{1}^{2}- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{2}-r_{1})",
     "\\end{align}$\n",
     "\n",
-    "The new coordinates, $r$ and $R_{\\text{CM}}$ are defined in the following way:"
+    "The new coordinates, $r$ and $R_{\\text{CM}}$ are defined in the following way:\n",
+    "\n",
+    "$\\begin{align}\n",
+    "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = 1",
+    "\\end{align}$"
    ]
   }
  ],
