--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -18,7 +18,7 @@
     "The new coordinates, $r$ and $R_{\\text{CM}}$ are defined in the following way:\n",
     "\n",
     "$\\begin{align}\n",
-    "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = 1",
+    "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = \\frac{m_{1}r_{1}+m_{2}r_{2}}{m_{1}+m_{2}}",
     "\\end{align}$"
    ]
   }
