--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -19,14 +19,14 @@
     "\n",
     "$\\begin{align}\n",
     "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = \\frac{m_{1}r_{1}+m_{2}r_{2}}{m_{1}+m_{2}}",
-    "\\end{align}$"
+    "\\end{align}$",
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "colab": {
-   "name": "assignment_jheaton_class1.ipynb",
+   "name": "a",
    "provenance": [],
    "version": "0.3.2"
   },
