--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -30,7 +30,9 @@
     "name": "ipython",
     "version": 3
    },
-   "file_extension": ".py"
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python"
   }
  },
  "nbformat": 4,
