--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -3,8 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "rMtCUtXxZ3ts"
+    "colab_type": "text"
    },
   "source": [
     "# Hamiltoninan - Center of Mass transformation\n",
