--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -6,7 +6,7 @@
     "colab_type": "text"
    },
   "source": [
-    "# Hamiltoninan - Center of Mass transformation\n",
+    "# Hamiltonian - Center of Mass transformation\n",
     "\n",
     "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n ",
     "\n",
@@ -18,6 +18,12 @@
     "\n",
     "$\\begin{align}\n",
     "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = 1",
+    "\\end{align}$ \n",
+    "\n",
+    "The nabla operators cooresponding to the center of coordinates are introduced by applying the chain rule to $r_{1}$ and $r_{2}$, respectively:",
+    "\n",
+    "$\\begin{align}\n",
+    "\\nabla_{1} = \\frac{\\partial}{\\partial r_{1}} = \\frac{\\partial R_{\\text{CM}}}{\\partial r_{1}}\\frac{\\partial}{\\partial R_{\\text{CM}}} + \\frac{\\partial r}{\\partial r_{2}}\\frac{\\partial}{\\partial r}",
     "\\end{align}$"
    ]
   }
