--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -23,7 +23,7 @@
     "The nabla operators cooresponding to the center of coordinates are introduced by applying the chain rule to $r_{1}$ and $r_{2}$ and substituting using eqs. (2), respectively:",
     "\n",
     "$\\begin{align}\n",
-    "\\nabla_{1} = \\frac{\\partial}{\\partial r_{1}} = \\frac{\\partial R_{\\text{CM}}}{\\partial r_{1}}\\frac{\\partial}{\\partial R_{\\text{CM}}} + \\frac{\\partial r}{\\partial r_{1}}\\frac{\\partial}{\\partial r}\\\\\n",
+    "\\nabla_{1} = \\frac{\\partial}{\\partial r_{1}} = \\frac{\\partial R_{\\text{CM}}}{\\partial r_{1}}\\frac{\\partial}{\\partial R_{\\text{CM}}} + \\frac{\\partial r}{\\partial r_{1}}\\frac{\\partial}{\\partial r}\\notag \\\\\n",
     "\n",
     "Fefa = dam\n",
     "\\end{align}$"
