--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -25,11 +25,11 @@
     "$\\begin{align}\n",
     "\\nabla_{1} = \\frac{\\partial}{\\partial r_{1}} &= \\frac{\\partial R_{\\text{CM}}}{\\partial r_{1}}\\frac{\\partial}{\\partial R_{\\text{CM}}} + \\frac{\\partial r}{\\partial r_{1}}\\frac{\\partial}{\\partial r}\\notag \\\\\n",
     "\n",
-    "&= \\frac{m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\text{CM}}}+\\frac{\\partial}{\\partial r} \\\\\n",
+    "&= \\frac{m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}+\\frac{\\partial}{\\partial r} \\\\\n",
     "\n",
     "\\nabla_{2} = \\frac{\\partial}{\\partial r_{2}} &= \\frac{\\partial R_{\\text{CM}}}{\\partial r_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}} + \\frac{\\partial r}{\\partial r_{2}}\\frac{\\partial}{\\partial r}\\notag \\\\\n",
     "\n",
-    "&= \\frac{m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\text{CM}}}-\\frac{\\partial}{\\partial r}",
+    "&= \\frac{m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}-\\frac{\\partial}{\\partial r}",
     "\\end{align}$"
    ]
   }
