--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -8,7 +8,9 @@
   "source": [
     "# Hamiltonian - Center of Mass transformation\n",
     "\n",
-    "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n ",
+    "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n",
+    ”\n",
+    "The cartesian representation of the Hamiltonian for a two-particle system is provided by the following:",
     "\n",
     "$\\begin{align}\n",
     "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla_{1}^{2}- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{2}-r_{1})",
