--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -19,7 +19,7 @@
     "The new coordinates, $r$ and $R_{\\text{CM}}$ are defined in the following way:\n",
     "\n",
     "$\\begin{align}\n",
-    "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = 1",
+    "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = \\frac{m_{1}r_{1}+m_{2}r_{2}}{m_{1}+m_{2}}",
     "\\end{align}$ \n",
     "\n",
     "The nabla operators corresponding to the center of coordinates are introduced by applying the chain rule to $r_{1}$ and $r_{2}$ and substituting using eqs. (2), respectively:",
@@ -32,7 +32,9 @@
     "\\nabla_{2} = \\frac{\\partial}{\\partial r_{2}} &= \\frac{\\partial R_{\\text{CM}}}{\\partial r_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}} + \\frac{\\partial r}{\\partial r_{2}}\\frac{\\partial}{\\partial r}\\notag \\\\\n",
     "\n",
     "&= \\frac{m_{2}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}-\\frac{\\partial}{\\partial r}",
-    "\\end{align}$"
+    "\\end{align}$ \n",
+    "\n",
+    "And the laplace operator can found using: $\\nabla^{2} = \\nabla \\cdot \\nabla$"
    ]
   }
  ],
