--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -34,9 +34,10 @@
     "&= \\frac{m_{2}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}-\\frac{\\partial}{\\partial r}",
     "\\end{align}$ \n",
     "\n",
-    "And the laplace operator can found by applying eqs. (3-4) twice: $\\nabla^{2} = \\nabla \\cdot \\nabla$: \n"
+    "And the laplace operator can found by applying eqs. (3-4) twice: $\\nabla^{2} = \\nabla \\cdot \\nabla$: \n",
     "\n",
     "$\\begin{align}\n",
+    "\n",
     "\\nabla_{1}^{2} = \\frac{m_{1}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}+\\frac{m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r} \notag \\\\\n",
     "\n",
     "AA \\notag \\\\\n",
