--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -44,7 +44,9 @@
     "\n",
     "Substituting eqs. (5-6) into equation (1) yields:",
     "$\\begin{align}\n",
-    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\left(\\frac{m_{1}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}+\\frac{2m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r}\\right)- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{2}-r_{1})",
+    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\left(\\frac{m_{1}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}+\\frac{2m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r}\\right) \\\\\n",
+    "\n",
+    "- \\frac{\\hbar^{2}}{2m_{2}}\\left(\\frac{m_{2}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}-\\frac{2m_{2}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r}\\right) + V(r) \\\\\n",
     "\\end{align}$\n",
     "Which was to be shown."
    ]
