--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -49,7 +49,7 @@
     "&- \\frac{\\hbar^{2}}{2m_{2}}\\left(\\frac{m_{2}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}-\\frac{2m_{2}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r}\\right) + V(r) \\notag \\\\\n",
     "\n",
     "= &-\\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)^{2}}\\left(m_{1}+m_{2}\\right)\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}-\\frac{\\hbar}{2}\\left(\\frac{1}{m_{1}}+\\frac{1}{m_{2}}\\right)\\frac{\\partial^{2}}{\\partial r^{2}}+V(r)\\\\ \n",
-    "= &-\\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{\\text{CM}}^{2}-\\frac{\\hbar m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla^{2}+V(r)",
+    "= &-\\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{\\text{CM}}^{2}-\\frac{\\hbar \\, m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla^{2}+V(r)",
     "\\end{align}$\n",
     "Which was to be shown."
    ]
