--- a/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
+++ b/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb
@@ -51,7 +51,7 @@
     "= &-\\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)^{2}}\\left(m_{1}+m_{2}\\right)\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}-\\frac{\\hbar}{2}\\left(\\frac{1}{m_{1}}+\\frac{1}{m_{2}}\\right)\\frac{\\partial^{2}}{\\partial r^{2}}+V(r) \\notag \\\\ \n",
     "= &-\\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{\\text{CM}}^{2}-\\frac{\\hbar \\, m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla^{2}+V(r)",
     "\\end{align}$\n",
-    "Where $V(r_{2}-r_{1})= V(r)$ was found using eq. (2), $\\nabla_{\\text{CM}}^{2}=\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}$ and $\\nabla^{2}=\\frac{\\partial^{2}}{\\partial r^{2}}$ . Finally, $\\frac{1}{m_{1}}+\\frac{1}{m_{2}} = \\frac{m_{2}}{m_{1}m_{2}}+\\frac{m_{1}}{m_{1}m_{2}} = \\frac{m_{1}+m_{2}}{m_{1}m_{2}$  and is usually denoted $\\mu$ as the reduced mass in literature. Hence, eq. (8) is the Hamiltonian written in Center of Mass coordinates, which was to be shown."
+    "Where $V(r_{2}-r_{1})= V(r)$ was found using eq. (2), $\\nabla_{\\text{CM}}^{2}$=$\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}$ and $\\nabla^{2}=\\frac{\\partial^{2}}{\\partial r^{2}}$ . Finally, $\\frac{1}{m_{1}}+\\frac{1}{m_{2}} = \\frac{m_{2}}{m_{1}m_{2}}+\\frac{m_{1}}{m_{1}m_{2}} = \\frac{m_{1}+m_{2}}{m_{1}m_{2}$  and is usually denoted $\\mu$ as the reduced mass in literature. Hence, eq. (8) is the Hamiltonian written in Center of Mass coordinates, which was to be shown."
    ]
   }
  ],
