--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -6,7 +6,7 @@
     "colab_type": "text"
    },
   "source": [
-    "# Hamiltonian - Center of Mass transformation\n",
+    "# 2 dimensioanl Continuity equation and Flux\n",
     "\n",
     "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n",
     "\n",
