--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -6,9 +6,10 @@
     "colab_type": "text"
    },
   "source": [
-    "# 2 dimensioanl Continuity equation and Flux\n",
+    "# 2 dimensional Continuity equation and Flux representation\n",
     "\n",
-    "In the following, the Hamiltonian in the Center of Mass formalism will be derived.\n",
+    "In the following, the two dimensioanl continuity equation will be derived. From this, the Flux operator will be defined and.\n",
+    "Hello\n",
     "\n",
     "The cartesian representation of the Hamiltonian for a two-particle system is provided by the following:",
     "\n",
