--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -8,10 +8,10 @@
   "source": [
     "# 2 dimensional Continuity equation and Flux representation\n",
     "\n",
-    "In the following, the two dimensioanl continuity equation will be derived. From this, the Flux operator will be defined and.\n",
-    "Hello\n",
+    "In the following, the two dimensioanl continuity equation will be derived. From this, the Flux operator will be defined and \n",
+    "and represented using the imaginary part of wavefunction crossproduct.\n",
     "\n",
-    "The cartesian representation of the Hamiltonian for a two-particle system is provided by the following:",
+    "[<b>The two-dimensional Hamiltonian in Cneter of Mass Coordinates<i>](https://github.com/Marrak23/Scattering_Theory/blob/main/Minor_Derivations/Flux.ipynb):",
     "\n",
     "$\\begin{align}\n",
     "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla_{1}^{2}- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{2}-r_{1})",
