--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -11,13 +11,14 @@
     "In the following, the two dimensioanl continuity equation will be derived. From this, the Flux operator will be defined and \n",
     "and represented using the imaginary part of wavefunction crossproduct.\n",
     "\n",
-    "[<b>The two-dimensional Hamiltonian in Cneter of Mass Coordinates<i>](https://github.com/Marrak23/Scattering_Theory/blob/main/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb):",
+    "[<b>The two-dimensional Hamiltonian in Cneter of Mass Coordinates<i>](https://github.com/Marrak23/Scattering_Theory/blob/main/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb) \n",
+    "is provided by the following:"
     "\n",
     "$\\begin{align}\n",
-    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2m_{1}}\\nabla_{1}^{2}- \\frac{\\hbar^{2}}{2m_{2}}\\nabla_{2}^{2} + V(r_{2}-r_{1})",
+    "\\mathcal{H} = - \\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{\\text{CM}}^{2} - \\frac{\\hbar^{2}m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{r}^{2} + V(r)",
     "\\end{align}$\n",
     "\n",
-    "The new coordinates, $r$ and $R_{\\text{CM}}$ are defined in the following way:\n",
+    "The time-dependent Schrödinger equation is provided by $i\\hbar\\frac{\\partial \\Psi}{\\partial t}=\\mathcal{H}\\Psi \\implies \\frac{\\partial \\Psi}{\\partial t} = - \\frac{i}{\\hbar}\\mathcal\\Psi $:\n",
     "\n",
     "$\\begin{align}\n",
     "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = \\frac{m_{1}r_{1}+m_{2}r_{2}}{m_{1}+m_{2}}",
