--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -12,7 +12,7 @@
     "and represented using the imaginary part of wavefunction crossproduct.\n",
     "\n",
     "[<b>The two-dimensional Hamiltonian in Cneter of Mass Coordinates<i>](https://github.com/Marrak23/Scattering_Theory/blob/main/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb) \n",
-    "is provided by the following:"
+    "is provided by the following:\n",
     "\n",
     "$\\begin{align}\n",
     "\\mathcal{H} = - \\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{\\text{CM}}^{2} - \\frac{\\hbar^{2}m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{r}^{2} + V(r)",
