--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -19,7 +19,7 @@
     "\\end{align}$\n",
     "\n",
     "The time-dependent Schrödinger equation is provided by \n",
-    "$i\\hbar\\frac{\\partial \\Psi}{\\partial t}=\\mathcal{H}\\Psi \\implies \\frac{\\partial \\Psi}{\\partial t} = - \\frac{i}{\\hbar}\\mathcal\\Psi $:\n",
+    "$i\\hbar\\frac{\\partial \\Psi}{\\partial t}=\\mathcal{H}\\Psi \\implies \\frac{\\partial \\Psi}{\\partial t} = - \\frac{i}{\\hbar}\\mathcal{H}\\Psi $:\n",
     "\n",
     "$\\begin{align}\n",
     "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = \\frac{m_{1}r_{1}+m_{2}r_{2}}{m_{1}+m_{2}}",
