--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -18,11 +18,14 @@
     "\\mathcal{H} = - \\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{\\text{CM}}^{2} - \\frac{\\hbar^{2}m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{r}^{2} + V(r)",
     "\\end{align}$\n",
     "\n",
-    "The time-dependent Schrödinger equation is provided by \n",
-    "$i\\hbar\\frac{\\partial \\Psi}{\\partial t}=\\mathcal{H}\\Psi \\implies \\frac{\\partial \\Psi}{\\partial t} = - \\frac{i}{\\hbar}\\mathcal{H}\\Psi $:\n",
+    "The time-dependent Schrödinger equation (TDSE) is provided by \n",
+    "$i\\hbar\\frac{\\partial \\Psi}{\\partial t}=\\mathcal{H}\\Psi \\implies \\frac{\\partial \\Psi}{\\partial t} = - \\frac{i}{\\hbar}\\mathcal{H}\\Psi $. \n",
+    "The probability density is provided by $|\\Psi|^{2} = \\Psi^{\\ast}\\Psi$. Taking the time-derivative of this yields:\n",
     "\n",
     "$\\begin{align}\n",
-    "r = r_{2} - r_{1}, \\quad R_{\\text{CM}} = \\frac{m_{1}r_{1}+m_{2}r_{2}}{m_{1}+m_{2}}",
+    "\\frac{\\partial |\\Psi|^{2}}{\\partial t} = \\frac{\\partial}{\\partial t}\\left(\\Psi^{\\ast}\\Psi\\right)\n",
+    "\stackrel[CR]{}{=} \n",
+    "\n",
     "\\end{align}$ \n",
     "\n",
     "The nabla operators corresponding to the center of coordinates are introduced by applying the chain rule to $r_{1}$ and $r_{2}$ and substituting using eqs. (2), respectively:",
