--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "$\\begin{align}\n",
     "\\frac{\\partial |\\Psi|^{2}}{\\partial t} = \\frac{\\partial}{\\partial t}\\left(\\Psi^{\\ast}\\Psi\\right)\n",
-    "\stackrel{\text{sometext}}{=} \n",
+    "\\stackrel{\text{sometext}}{=} \n",
     "\n",
     "\\end{align}$ \n",
     "\n",
