--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "$\\begin{align}\n",
     "\\frac{\\partial |\\Psi|^{2}}{\\partial t} = \\frac{\\partial}{\\partial t}\\left(\\Psi^{\\ast}\\Psi\\right)\n",
-    "\\stackrel{\\text{PR}}{=} \\Psi^{\\ast}\\frac{\\partial \\Psi}{\\partial t} + \\Psi\\frac{\\partial \\Psi}{\\partial t}\n",
+    "\\stackrel{\\text{PR}}{=} \\Psi^{\\ast}\\frac{\\partial \\Psi}{\\partial t} + \\Psi\\frac{\\partial \\Psi^{\\ast}}{\\partial t}\n",
     "\n",
     "\\end{align}$ \n",
     "\n",
