--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -24,40 +24,11 @@
     "\n",
     "$\\begin{align}\n",
     "\\frac{\\partial |\\Psi|^{2}}{\\partial t} = \\frac{\\partial}{\\partial t}\\left(\\Psi^{\\ast}\\Psi\\right)\n",
-    "\\stackrel{\\text{PR}}{=} \\Psi^{\\ast}\\frac{\\partial \\Psi}{\\partial t} + \\Psi\\frac{\\partial \\Psi^{\\ast}}{\\partial t}\n",
+    "\\stackrel{\\text{PR}}{=} \\Psi^{\\ast}\\frac{\\partial \\Psi}{\\partial t} + \\Psi\\frac{\\partial \\Psi^{\\ast}}{\\partial t} \\stackrel{\\text{TDSE}}{=}\n",
     "\n",
     "\\end{align}$ \n",
     "\n",
-    "The nabla operators corresponding to the center of coordinates are introduced by applying the chain rule to $r_{1}$ and $r_{2}$ and substituting using eqs. (2), respectively:",
-    "\n",
-    "$\\begin{align}\n",
-    "\\nabla_{1} = \\frac{\\partial}{\\partial r_{1}} &= \\frac{\\partial R_{\\text{CM}}}{\\partial r_{1}}\\frac{\\partial}{\\partial R_{\\text{CM}}} + \\frac{\\partial r}{\\partial r_{1}}\\frac{\\partial}{\\partial r}\\notag \\\\\n",
-    "\n",
-    "&= \\frac{m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}+\\frac{\\partial}{\\partial r} \\\\\n",
-    "\n",
-    "\\nabla_{2} = \\frac{\\partial}{\\partial r_{2}} &= \\frac{\\partial R_{\\text{CM}}}{\\partial r_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}} + \\frac{\\partial r}{\\partial r_{2}}\\frac{\\partial}{\\partial r}\\notag \\\\\n",
-    "\n",
-    "&= \\frac{m_{2}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}-\\frac{\\partial}{\\partial r}",
-    "\\end{align}$\n",
-    "\n",
-    "And the laplace operator can found by applying eqs. (3-4) twice: $\\nabla^{2} = \\nabla \\cdot \\nabla$: \n",
-    "\n",
-    "$\\begin{align}\n",
-    "\\nabla_{1}^{2} &= \\frac{m_{1}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}+\\frac{2m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r} \\\\\n",
-    "\n",
-    "\\nabla_{2}^{2} &= \\frac{m_{2}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}-\\frac{2m_{2}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r} \\\\\n",
-    "\\end{align}$ \n",
-    "\n",
-    "Substituting eqs. (5-6) into equation (1) yields:",
-    "$\\begin{align}\n",
-    "\\mathcal{H} = &- \\frac{\\hbar^{2}}{2m_{1}}\\left(\\frac{m_{1}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}+\\frac{2m_{1}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r}\\right) \\notag \\\\\n",
-    "\n",
-    "&- \\frac{\\hbar^{2}}{2m_{2}}\\left(\\frac{m_{2}^{2}}{\\left(m_{1}+m_{2}\\right)^{2}}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}+\\frac{\\partial^{2}}{\\partial r^{2}}-\\frac{2m_{2}}{m_{1}+m_{2}}\\frac{\\partial}{\\partial R_{\\text{CM}}}\\frac{\\partial}{\\partial r}\\right) + V(r) \\notag \\\\\n",
-    "\n",
-    "= &-\\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)^{2}}\\left(m_{1}+m_{2}\\right)\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}-\\frac{\\hbar}{2}\\left(\\frac{1}{m_{1}}+\\frac{1}{m_{2}}\\right)\\frac{\\partial^{2}}{\\partial r^{2}}+V(r) \\notag \\\\ \n",
-    "= &-\\frac{\\hbar^{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla_{\\text{CM}}^{2}-\\frac{\\hbar \\, m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\nabla^{2}+V(r)",
-    "\\end{align}$\n",
-    "Where $V(r_{2}-r_{1})= V(r)$ was found using eq. (2), $\\nabla_{\\text{CM}}^{2}$=$\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}$ and $\\nabla^{2}=\\frac{\\partial^{2}}{\\partial r^{2}}$ . Finally, $\\frac{1}{m_{1}}+\\frac{1}{m_{2}} = \\frac{m_{2}}{m_{1}m_{2}}+\\frac{m_{1}}{m_{1}m_{2}} = \\frac{m_{1}+m_{2}}{m_{1}m_{2}}$  and is usually called the reduced mass, denoted $\\mu$, in literature. Hence, eq. (8) is the Hamiltonian written in Center of Mass coordinates, which was to be shown."
+    "End. \n"
    ]
   }
  ],
