--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -28,6 +28,10 @@
     "\n",
     "\\stackrel{\\text{TDSE}}{=} &- \\Psi^{\\ast}i\\left[-\\frac{\\hbar}{2}\\left(\\frac{1}{m_{1}+m_{2}}\\nabla_{\\text{CM}}^{2}+\\frac{m_{1}m_{2}}{m_{1}+m_{2}}\\nabla_{r}^{2}\\right)+V(r)\\right]\\Psi \\notag \\\\\n",
     "\n",
+    "&+\\Psi i\\left[\\frac{\\hbar}{2}\\left(\\frac{1}{m_{1}+m_{2}}\\nabla_{\\text{CM}}^{2}+\\frac{m_{1}m_{2}}{m_{1}+m_{2}}\\nabla_{r}^{2}\\right)+V(r)\\right]\\Psi^{\\ast} \\notag \\\\\n",
+    "\n",
+    "\\stackrel{\\text{TDSE}}{=} &- \\Psi^{\\ast}i\\left[-\\frac{\\hbar}{2}\\left(\\frac{1}{m_{1}+m_{2}}\\nabla_{\\text{CM}}^{2}+\\frac{m_{1}m_{2}}{m_{1}+m_{2}}\\nabla_{r}^{2}\\right)\\right]\\Psi \\notag \\\\\n",
+    "\n",
     "&+\\Psi i\\left[\\frac{\\hbar}{2}\\left(\\frac{1}{m_{1}+m_{2}}\\nabla_{\\text{CM}}^{2}+\\frac{m_{1}m_{2}}{m_{1}+m_{2}}\\nabla_{r}^{2}\\right)\\right]\\Psi^{\\ast} \\notag \\\\\n",
     "\n",
     "\\end{align}$ \n",
