--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -23,7 +23,7 @@
     "The probability density is provided by $|\\Psi|^{2} = \\Psi^{\\ast}\\Psi$. Taking the time-derivative of this yields:\n",
     "\n",
     "$\\begin{align}\n",
-    "\\frac{\\partial |\\Psi|^{2}}{\\partial t} &= \\frac{\\partial}{\\partial t}\\left(\\Psi^{\\ast}\\Psi\\right)\n",
+    "\\frac{\\partial |\\Psi|^{2}}{\\partial t} = \\frac{\\partial}{\\partial t}\\left(\\Psi^{\\ast}&\\Psi\\right)\n",
     "\\stackrel{\\text{PR}}{=} \\Psi^{\\ast}\\frac{\\partial \\Psi}{\\partial t} + \\Psi\\frac{\\partial \\Psi^{\\ast}}{\\partial t}\\notag \\\\\n",
     "\n",
     "\\stackrel{\\text{TDSE}}{=} &- \\Psi^{\\ast}i\\left[-\\frac{\\hbar}{2}\\left(\\frac{1}{m_{1}+m_{2}}\\nabla_{\\text{CM}}^{2}+\\frac{m_{1}m_{2}}{m_{1}+m_{2}}\\nabla_{r}^{2}\\right)+V(r)\\right]\\Psi \\notag \\\\\n",
