--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -36,7 +36,8 @@
     "\n",
     "\\end{align}$ \n",
     "\n",
-    "Define $\\nabla = (\\frac{\\partial}{\\partial r}; \\frac{\\partial}{\\partial R_{\\text{CM}}})$ and $M = -\\frac{1}{2} \\begin{bmatrix} \\frac{1}{m_{1}+m_{2}} & 0 \\ 0 & \\frac{m_{1}m_{2}}{m_{1}+m_{2}} \\end{bmatrix}$ \n"
+    "Define $\\nabla = (\\frac{\\partial}{\\partial r}; \\frac{\\partial}{\\partial R_{\\text{CM}}})$ and\n "
+    "$M = -\\frac{1}{2} \\begin{bmatrix} \\frac{1}{m_{1}+m_{2}} & 0 \\ 0 & \\frac{m_{1}m_{2}}{m_{1}+m_{2}} \\end{bmatrix}$ \n"
    ]
   }
  ],
