--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -36,8 +36,9 @@
     "\n",
     "\\end{align}$ \n",
     "\n",
-    "Define $\\nabla = (\\frac{\\partial}{\\partial r}; \\frac{\\partial}{\\partial R_{\\text{CM}}})$ and\n ",
-    "$M = -\\frac{1}{2} \\begin{bmatrix} \\frac{1}{m_{1}+m_{2}} & 0 \\\\ 0 & \\frac{m_{1}m_{2}}{m_{1}+m_{2}} \\end{bmatrix}$ \n"
+    "Define $\\nabla = (\\frac{\\partial}{\\partial R_{\\text{CM}}}; \\frac{\\partial}{\\partial r})$ and\n ",
+    "$M = -\\frac{1}{2} \\begin{bmatrix} \\frac{1}{m_{1}+m_{2}} & 0 \\\\ 0 & \\frac{m_{1}m_{2}}{m_{1}+m_{2}} \\end{bmatrix}$, \n",
+    "then $\\nabla\\cdot M\\cdot \\nabla = -\\frac{1}{2\\left(m_{1}+m_{2}\\right)}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}-\\frac{m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\frac{\\partial^{2}}{\\partial r^{2}}$\n"
    ]
   }
  ],
