--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -38,7 +38,17 @@
     "\n",
     "Define $\\nabla = (\\frac{\\partial}{\\partial R_{\\text{CM}}}; \\frac{\\partial}{\\partial r})$ and\n ",
     "$M = -\\frac{1}{2} \\begin{bmatrix} \\frac{1}{m_{1}+m_{2}} & 0 \\\\ 0 & \\frac{m_{1}m_{2}}{m_{1}+m_{2}} \\end{bmatrix}$, \n",
-    "then $\\nabla\\cdot M\\cdot \\nabla = -\\frac{1}{2\\left(m_{1}+m_{2}\\right)}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}-\\frac{m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\frac{\\partial^{2}}{\\partial r^{2}}$\n"
+    "then $\\nabla\\cdot M\\cdot \\nabla = -\\frac{1}{2\\left(m_{1}+m_{2}\\right)}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}-\\frac{m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\frac{\\partial^{2}}{\\partial r^{2}}$. Hence\n",
+    "\n",
+    "$\\begin{align}\n",
+    "\\frac{\\partial |\\Psi|^{2}}{\\partial t} &= -i\\hbar \\left[\\Psi^{\\ast}\\nabla\\cdot M\\cdot\\nabla \\Psi - \\Psi\\nabla\\cdot M \\cdot \\nabla \\Psi^{\\ast}\\right] \\\\\n",
+    "\n",
+    "&= - \nabla \\cdot \\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\\\\n",
+    "\n",
+     "&= - \\text{div}\\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\\\\n",
+    "\n",
+    "\\end{align}$ \n",
+   "ge4ef\n"
    ]
   }
  ],
