--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -43,9 +43,11 @@
     "$\\begin{align}\n",
     "\\frac{\\partial |\\Psi|^{2}}{\\partial t} &= -i\\hbar \\left[\\Psi^{\\ast}\\nabla\\cdot M\\cdot\\nabla \\Psi - \\Psi\\nabla\\cdot M \\cdot \\nabla \\Psi^{\\ast}\\right] \\\\\n",
     "\n",
-    "&= - \nabla \\cdot \\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\\\\n",
+    "&= - \\nabla \\cdot \\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\\\\n",
     "\n",
      "&= - \\text{div}\\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\\\\n",
+    "\n",
+    "&= - \\text{div} \\, \\textbf{J} \\\\\n",
     "\n",
     "\\end{align}$ \n",
    "ge4ef\n"
