--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -41,16 +41,16 @@
     "then $\\nabla\\cdot M\\cdot \\nabla = -\\frac{1}{2\\left(m_{1}+m_{2}\\right)}\\frac{\\partial^{2}}{\\partial R_{\\text{CM}}^{2}}-\\frac{m_{1}m_{2}}{2\\left(m_{1}+m_{2}\\right)}\\frac{\\partial^{2}}{\\partial r^{2}}$. Hence\n",
     "\n",
     "$\\begin{align}\n",
-    "\\frac{\\partial |\\Psi|^{2}}{\\partial t} &= -i\\hbar \\left[\\Psi^{\\ast}\\nabla\\cdot M\\cdot\\nabla \\Psi - \\Psi\\nabla\\cdot M \\cdot \\nabla \\Psi^{\\ast}\\right] \\\\\n",
+    "\\frac{\\partial |\\Psi|^{2}}{\\partial t} &= -i\\hbar \\left[\\Psi^{\\ast}\\nabla\\cdot M\\cdot\\nabla \\Psi - \\Psi\\nabla\\cdot M \\cdot \\nabla \\Psi^{\\ast}\\right] \\notag \\\\\n",
     "\n",
-    "&= - \\nabla \\cdot \\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\\\\n",
+    "&= - \\nabla \\cdot \\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\notag \\\\\n",
     "\n",
-     "&= - \\text{div}\\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\\\\n",
+     "&= - \\text{div}\\left(-i\\hbar\\left[\\Psi^{\\ast} M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast}\\right]\\right) \\notag \\\\\n",
     "\n",
     "&= - \\text{div} \\, \\textbf{J} \\\\\n",
     "\n",
     "\\end{align}$ \n",
-   "ge4ef\n"
+   "where $\\textbf{J} \\stackrel{\\text{Def.}}{=} -i\\hbar \\left[\\Psi^{\\ast}M\\cdot \\nabla \\Psi - \\Psi M \\cdot\\nabla \\Psi^{\\ast}\\right]$. From this, \n"
    ]
   }
  ],
