--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -50,7 +50,12 @@
     "&= - \\text{div} \\, \\textbf{J} \\\\\n",
     "\n",
     "\\end{align}$ \n",
-   "where $\\textbf{J} \\stackrel{\\text{Def.}}{=} -i\\hbar \\left[\\Psi^{\\ast}M\\cdot \\nabla \\Psi - \\Psi M \\cdot\\nabla \\Psi^{\\ast}\\right]$. From this, \n"
+   "where $\\textbf{J} \\stackrel{\\text{Def.}}{=} -i\\hbar \\left[\\Psi^{\\ast}M\\cdot \\nabla \\Psi - \\Psi M \\cdot\\nabla \\Psi^{\\ast}\\right]$. Hence the continuity equation has been derived: \n",
+   "$\\begin{align}\n",
+    "\\frac{\\partial |\\Psi|^{2}}{\\partial t} + \\text{div} \\, \\textbf{J} = 0 \\\\\n",
+    "\n",
+    "\\end{align}$ \n",
+    "fwpojfe"
    ]
   }
  ],
