--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -11,6 +11,8 @@
     "In the following, the two dimensioanl continuity equation will be derived. From this, the Flux operator will be defined and \n",
     "and represented using the imaginary part of wavefunction crossproduct.\n",
     "\n",
+    "## 2 dimensional Continuity equation"
+    "\n",
     "[<b>The two-dimensional Hamiltonian in Center of Mass Coordinates<i>](https://github.com/Marrak23/Scattering_Theory/blob/main/Minor_Derivations/Hamiltonian_Center_of_Mass.ipynb) \n",
     "is provided by the following:\n",
     "\n",
