--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -57,7 +57,13 @@
     "\\frac{\\partial |\\Psi|^{2}}{\\partial t} + \\text{div} \\, \\textbf{J} = 0 \\\\\n",
     "\n",
     "\\end{align}$ \n",
-    "fwpojfe"
+    "\n",
+    "Which was to be shown.",
+    "\n",
+    "## Two dimensional Flux representation\n",
+    "$\Psi$ is complex and can be written in the following form: $\Psi = \\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}$. Then the following holds for $\Psi$: $\\Psi^{\\ast} = \\Psi_{\\text{Re}}-i\\Psi_{\\text{Im}}, \quad \\mathcel{Re}(\\Psi) = \\Psi_{\\text{Re}}$ and $\\mathcal{Im}(\\Psi) = \\Psi_{\\text{Im}}$. From this, the flux operator can be rewritten: \n",
+    "\n",
+    "ægwij"
    ]
   }
  ],
