--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "\\end{align}$ \n",
     "\n",
-    "Which was to be shown.",
+    "Which was to be shown. \n",
     "\n",
     "## Two dimensional Flux representation\n",
     "$\Psi$ is complex and can be written in the following form: $\Psi = \\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}$. Then the following holds for $\Psi$: $\\Psi^{\\ast} = \\Psi_{\\text{Re}}-i\\Psi_{\\text{Im}}, \quad \\mathcel{Re}(\\Psi) = \\Psi_{\\text{Re}}$ and $\\mathcal{Im}(\\Psi) = \\Psi_{\\text{Im}}$. From this, the flux operator can be rewritten: \n",
