--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -63,7 +63,13 @@
     "## Two dimensional Flux representation\n",
     "$\\Psi$ is complex and can be written in the following form: $\\Psi = \\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}$. Then the following holds for $\\Psi$: $\\Psi^{\\ast} = \\Psi_{\\text{Re}}-i\\Psi_{\\text{Im}}, \\quad \\mathcal{Re}(\\Psi) = \\Psi_{\\text{Re}}$ and $\\mathcal{Im}(\\Psi) = \\Psi_{\\text{Im}}$. From this, the flux operator can be rewritten: \n",
     "\n",
-    "ægwij"
+    "$\\begin{align}\n",
+    "\\textbf{J} &= -i\\hbar\\left(\\Psi^{\\ast}M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast} \\right) \\notag \\\\\n",
+    "\n",
+    "&= -i\\hbar\\left(\\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right)^{\\ast}M \\cdot \\nabla \\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right) - \\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right) M \\cdot \\nabla \\left(\\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right)\\right)^{\\ast} \\right)",
+    "\\end{align}$\n",
+    "\n",
+    "pgf"
    ]
   }
  ],
