--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -66,7 +66,13 @@
     "$\\begin{align}\n",
     "\\textbf{J} &= -i\\hbar\\left[\\Psi^{\\ast}M \\cdot \\nabla \\Psi - \\Psi M \\cdot \\nabla \\Psi^{\\ast} \\right] \\notag \\\\\n",
     "\n",
-    "&= -i\\hbar\\left[\\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right)^{\\ast}M \\cdot \\nabla \\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right) - \\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right) M \\cdot \\nabla \\left(\\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right)\\right)^{\\ast} \\right]",
+    "&= -i\\hbar\\left[\\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right)^{\\ast}M \\cdot \\nabla \\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right) - \\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right) M \\cdot \\nabla \\left(\\left(\\Psi_{\\text{Re}} + i\\Psi_{\\text{Im}}\\right)\\right)^{\\ast} \\right] \\notag \\\\\n",
+    "\n",
+    "&= i\\hbar [\\Psi_{\\text{Re}}M\\cdot \\nabla\\Psi_{\\text{Re}} + i\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re} + \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}} \\notag \\\\\n",
+    "\n",
+    "&\\quad - \\Psi_{\\text{Re}}M\\nabla\\Psi_{\\text{Re}} + i \\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{\\text{Im}}-i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re} - \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}}}] \n",
+    "\n",
+    "pokwgr"
     "\\end{align}$\n",
     "\n",
     "pgf"
