--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "&= i\\hbar [\\Psi_{\\text{Re}}M\\cdot \\nabla\\Psi_{\\text{Re}} + i\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} + \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}} \\notag \\\\\n",
     "\n",
-    "&- \\Psi_{\\text{Re}}M\\nabla\\Psi_{\\text{Re}} + i \\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{\\text{Im}}-i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re} - \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}}}] \n",
+    "&- \\Psi_{\\text{Re}}M\\nabla\\Psi_{\\text{Re}} + i \\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{\\text{Im}}-i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} - \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}}] \n",
     "\n",
     "\\end{align}$\n",
     "\n",
