--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -52,8 +52,8 @@
     "&= - \\text{div} \\, \\textbf{J} \\\\\n",
     "\n",
     "\\end{align}$ \n",
-   "where $\\textbf{J} \\stackrel{\\text{Def.}}{=} -i\\hbar \\left[\\Psi^{\\ast}M\\cdot \\nabla \\Psi - \\Psi M \\cdot\\nabla \\Psi^{\\ast}\\right]$. Hence the continuity equation has been derived: \n",
-   "$\\begin{align}\n",
+    "where $\\textbf{J} \\stackrel{\\text{Def.}}{=} -i\\hbar \\left[\\Psi^{\\ast}M\\cdot \\nabla \\Psi - \\Psi M \\cdot\\nabla \\Psi^{\\ast}\\right]$. Hence the continuity equation has been derived: \n",
+    "$\\begin{align}\n",
     "\\frac{\\partial |\\Psi|^{2}}{\\partial t} + \\text{div} \\, \\textbf{J} = 0 \\\\\n",
     "\n",
     "\\end{align}$ \n",
@@ -70,11 +70,19 @@
     "\n",
     "&= -i\\hbar [\\Psi_{\\text{Re}}M\\cdot \\nabla\\Psi_{\\text{Re}} + i\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} + \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}} \\notag \\\\\n",
     "\n",
-    "&\\qquad \\; \\; - \\Psi_{\\text{Re}}M \\cdot \\nabla\\Psi_{\\text{Re}} + i \\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{\\text{Im}}-i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} - \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}}] \n",
+    "&\\qquad \\; \\; - \\Psi_{\\text{Re}}M \\cdot \\nabla\\Psi_{\\text{Re}} + i \\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{\\text{Im}}-i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} - \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}}] \\notag \\\\\n",
+    "\n",
+    "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
     "\n",
     "\\end{align}$\n",
     "\n",
-    "pgf"
+    "Exploiting than $\\mathcal{Im}(\\Psi_{\\text{Re}}) = \\mathcal{Im}(\\Psi_{\\text{Im}}) = 0$ and therefore essentially adding "0" to eq. (4) yields: \n",
+    "$\\begin{align}\n",
+    "\\textbf{J} &= \\hbar \\mathcal{IM}\\left[i \\left(\\Psi_{\\text{Re}}\\right)\\right] \\notag \\\\\n",
+    "\n",
+    " \n",
+    "\\end{align}$\n",
+    "oggw"
    ]
   }
  ],
