--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "Exploiting than $\\mathcal{Im}(\\Psi_{\\text{Re}}) = \\mathcal{Im}(\\Psi_{\\text{Im}}) = 0$ and therefore essentially adding "0" to eq. (4) yields: \n",
     "$\\begin{align}\n",
-    "\\textbf{J} &= \\hbar \\mathcal{IM}\\left[i \\left(\\Psi_{\\text{Re}}\\right)\\right] \\notag \\\\\n",
+    "\\textbf{J} &= \\hbar \\mathcal{IM}\\left[i \\left(\\Psi_{\\text{Re}}\\right)\\right] \\notag \n",
     "\n",
     "\\end{align}$\n",
     "oggw"
