--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -75,9 +75,7 @@
     "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
     "\n",
     "\\end{align}$\n",
-    "\n",
-    "Exploiting than $\\mathcal{Im}(\\Psi_{\\text{Re}}) = \\mathcal{Im}(\\Psi_{\\text{Im}}) = 0$ and therefore essentially adding "0" to eq. (4) yields: \n",
-    "oggw"
+    "fweww"
    ]
   }
  ],
