--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -75,7 +75,14 @@
     "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
     "\n",
     "\\end{align}$\n",
-    "fweww"
+    "\n",
+    "Exploiting than $\\mathcal{Im}(\\Psi_{\\text{Re}}) = \\mathcal{Im}(\\Psi_{\\text{Im}}) = 0$ and therefore essentially adding "0" to eq. (4) yields: \n",
+    "$\\begin{align}\n",
+    "\n",
+    "&= Hey \\notag \n",
+    "\n",
+    "\\end{align}$\n",
+    "oggw"
    ]
   }
  ],
