--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -76,13 +76,7 @@
     "\n",
     "\\end{align}$\n",
     "\n",
-    "Exploiting than $\\mathcal{Im}(\\Psi_{\\text{Re}}) = \\mathcal{Im}(\\Psi_{\\text{Im}}) = 0$ and therefore essentially adding "0" to eq. (4) yields: \n",
-    "$\\begin{align}\n",
-    "\n",
-    "&= Hey \\notag \n",
-    "\n",
-    "\\end{align}$\n",
-    "oggw"
+    "Exploiting than $\\mathcal{Im}(\\Psi_{\\text{Re}}) = \\mathcal{Im}(\\Psi_{\\text{Im}}) = 0$ and therefore essentially adding "0" to eq. (4) yields: \n"
    ]
   }
  ],
