--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -76,6 +76,9 @@
     "\n",
     "\\end{align}$\n",
     "\n",
+    "Exploiting than $\\mathcal{Im}(\\Psi_{\\text{Re}}) = \\mathcal{Im}(\\Psi_{\\text{Im}}) = 0$ and therefore essentially adding "0" to eq. (4) yields: \n",
+    "\n",
+    "$\\begin{align}\n",
     "\\textbf{J} &= \\hbar \\mathcal{IM}\\left[i \\left(\\Psi_{\\text{Re}}\\right)\\right] \\notag \\\\\n",
     "\n",
     "&= Hey \\notag \n",
