--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "&\\qquad \\; \\; - \\Psi_{\\text{Re}}M \\cdot \\nabla\\Psi_{\\text{Re}} + i \\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{\\text{Im}}-i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} - \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}}] \\notag \\\\\n",
     "\n",
-    "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] = -i\\hbar 2\left[i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
+    "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] = -i\\hbar 2\\left[i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
     "\n",
     "\\end{align}$\n",
     "\n",
