--- a/Minor_Derivations/Flux.ipynb
+++ b/Minor_Derivations/Flux.ipynb
@@ -72,14 +72,14 @@
     "\n",
     "&\\qquad \\; \\; - \\Psi_{\\text{Re}}M \\cdot \\nabla\\Psi_{\\text{Re}} + i \\Psi_{\\text{Re}}M\\cdot \\nabla \\Psi_{\\text{Im}}-i\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} - \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Im}}] \\notag \\\\\n",
     "\n",
-    "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] = -i\\hbar 2\\left[i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
+    "&= -i\\hbar\\left[2 i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - 2 i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] = \\hbar 2\\left[\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} -\\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}}\\right] \n",
     "\n",
     "\\end{align}$\n",
     "\n",
     "Exploiting that $\\mathcal{Im}(\\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Re}}) 0 \\land \\mathcal{Im}(\\Psi_{\\text{Im}} M \\cdot \\nabla \\Psi_{\\text{Im}}) = 0$ and therefore essentially adding '0' to eq. (4) yields: \n",
     "\n",
     "$\\begin{align}\n",
-    "\\textbf{J} &= \\hbar \\mathcal{Im}\\left[i \\left(\\Psi_{\\text{Re}}\\right)\\right] \\notag \\\\\n",
+    "\\textbf{J} &= -i\\hbar 2\\left[i \\Psi_{\\text{Re}} M \\cdot \\nabla \\Psi_{\\text{Im}} - i \\Psi_{\\text{Im}}M\\cdot \\nabla \\Psi_{\\text{Re}} + \\right] \\notag \\\\\n",
     "\n",
     "&= Hey \\notag \n",
     "\n",
